--- a/src/App.css
+++ b/src/App.css
@@ -388,3 +388,136 @@ h6 {
 .project-links a:hover {
   color: #fff;
 }
+
+/*CONTACT*/
+
+.contact-section {
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  padding: 80px 20px;
+  text-align: center;
+  color: #fff;
+  position: relative;
+  z-index: 1;
+  margin-top: 56px;
+  margin-bottom: 55px;
+}
+
+.contact-section h2 {
+  font-size: 2.5rem;
+  color: #00d1ff;
+  margin-bottom: 10px;
+}
+
+.contact-section .subtitle {
+  font-size: 1.1rem;
+  margin-bottom: 30px;
+  color: #ccc;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  max-width: 500px;
+  margin: 0 auto 20px;
+}
+
+.contact-form input,
+.contact-form textarea {
+  padding: 15px;
+  border: none;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  resize: vertical;
+}
+
+.contact-form input::placeholder,
+.contact-form textarea::placeholder {
+  color: #ddd;
+}
+
+.contact-form button {
+  padding: 15px;
+  border: none;
+  border-radius: 8px;
+  background-color: #00d1ff;
+  color: #111;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.contact-form button:hover {
+  background-color: #009acc;
+}
+
+.alt-contact,
+.social-links {
+  margin-top: 20px;
+}
+
+.alt-contact a {
+  color: #9b59b6;
+  font-weight: bold;
+}
+
+.alt-contact a:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+  .contact-form {
+    width: 100%;
+    padding: 0 10px;
+  }
+}
+
+.social-links {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+  flex-wrap: wrap;
+}
+
+.social-links a {
+  display: inline-block;
+  transition: transform 0.2s ease;
+}
+
+.social-links a:hover {
+  transform: scale(1.1);
+}
+
+.social-icon-linkedin {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  cursor: pointer;
+}
+
+.social-icon-git {
+  width: 70px;
+  height: 95px;
+  object-fit: contain;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.social-icon-mail {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .social-links {
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+}
