--- a/src/App.css
+++ b/src/App.css
@@ -522,3 +522,75 @@ h6 {
     gap: 15px;
   }
 }
+
+/* ErrorPage */
+.notfound-section {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  background: linear-gradient(135deg, #0f2027, #2f5764, #407b95, #0f2027);
+  background-size: 400% 400%;
+  animation: gradientMove 10s ease infinite;
+}
+
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.notfound-section h1 {
+  font-size: 10rem;
+  margin: 0;
+}
+
+.notfound-section h2 {
+  font-size: 2rem;
+  margin: 20px 0;
+}
+
+.notfound-section p {
+  font-size: 1.2rem;
+  max-width: 600px;
+  margin-bottom: 30px;
+}
+
+.notfound-btn {
+  padding: 15px 30px;
+  background-color: #00d1ff;
+  color: #fff;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+
+.notfound-btn:hover {
+  transform: scale(1.05);
+  background-color: #00b8e0;
+}
