--- a/src/App.css
+++ b/src/App.css
@@ -37,11 +37,15 @@ h6 {
 
 .custom-navbar {
   background-color: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(8px); /* sfocatura dietro */
+  backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px); /* supporto Safari */
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   padding: 0.8rem 1rem;
-  transition: background-color 0.3s ease;
+  transition: padding 0.3s ease, background-color 0.3s ease;
+}
+
+.custom-navbar.navbar-shrink {
+  padding: 0.4rem 1rem;
 }
 
 .custom-navbar .nav-link {
