--- a/src/App.css
+++ b/src/App.css
@@ -375,6 +375,7 @@ h6 {
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  z-index: 3;
 }
 
 .project-card img {
